--- a/myApp/package.json
+++ b/myApp/package.json
@@ -2,7 +2,8 @@
   "name": "myApp",
   "version": "1.0.0",
   "private": true,
-  "description": "react",
+  "description": "taroMyApp",
+  "main": "index.js",
   "scripts": {
     "build:weapp": "taro build --type weapp",
     "build:swan": "taro build --type swan",
@@ -28,15 +29,20 @@
     "@tarojs/taro-swan": "^1.2.0-beta.16",
     "@tarojs/taro-tt": "^1.2.0-beta.16",
     "@tarojs/taro-weapp": "^1.2.0-beta.16",
+    "@tarojs/rn-runner": "^1.2.0-beta.16",
+    "@tarojs/mobx": "^1.2.0-beta.16",
+    "@tarojs/mobx-h5": "^1.2.0-beta.16",
+    "@tarojs/mobx-rn": "^1.2.0-beta.16",
+    "mobx": "^5.5.2",
     "nervjs": "^1.3.9",
     "nerv-devtools": "^1.3.9"
   },
   "devDependencies": {
-    "@types/react": "^16.4.6",
+    "@types/react": "16.3.14",
     "@types/webpack-env": "^1.13.6",
     "@tarojs/plugin-babel": "^1.2.0-beta.16",
     "@tarojs/plugin-csso": "^1.2.0-beta.16",
-    "@tarojs/plugin-sass": "^1.2.0-beta.16",
+    "@tarojs/plugin-less": "^1.2.0-beta.16",
     "@tarojs/plugin-uglifyjs": "^1.2.0-beta.16",
     "@tarojs/webpack-runner": "^1.2.0-beta.16",
     "babel-plugin-transform-class-properties": "^6.24.1",
