--- a/myApp/project.config.json
+++ b/myApp/project.config.json
@@ -1,8 +1,8 @@
 {
   "miniprogramRoot": "./dist",
   "projectname": "myApp",
-  "description": "react",
-  "appid": "wx4949a3afa9e6fe87",
+  "description": "taroMyApp",
+  "appid": "touristappid",
   "setting": {
     "urlCheck": true,
     "es6": false,
