--- a/project.config.json
+++ b/project.config.json
@@ -1,7 +1,7 @@
 {
   "miniprogramRoot": "./dist",
   "projectname": "myApp",
-  "description": "taroMyApp",
+  "description": "myApp",
   "appid": "touristappid",
   "setting": {
     "urlCheck": true,
