--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@tarojs/components": "^1.2.0-beta.16",
+    "@tarojs/rn-runner": "^1.2.0-beta.16",
     "@tarojs/router": "^1.2.0-beta.16",
     "@tarojs/taro": "^1.2.0-beta.16",
     "@tarojs/taro-alipay": "^1.2.0-beta.16",
@@ -36,6 +37,7 @@
     "@tarojs/plugin-babel": "^1.2.0-beta.16",
     "@tarojs/plugin-csso": "^1.2.0-beta.16",
     "@tarojs/plugin-less": "^1.2.0-beta.16",
+    "@tarojs/plugin-sass": "^1.2.0-beta.16",
     "@tarojs/plugin-uglifyjs": "^1.2.0-beta.16",
     "@tarojs/webpack-runner": "^1.2.0-beta.16",
     "@types/react": "^16.4.6",
