--- a/project.config.json
+++ b/project.config.json
@@ -2,7 +2,7 @@
   "miniprogramRoot": "./dist",
   "projectname": "myApp",
   "description": "myApp",
-  "appid": "touristappid",
+  "appid": "wx4949a3afa9e6fe87",
   "setting": {
     "urlCheck": true,
     "es6": false,
